# taskplanner-server-rs

./: .envrc  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  flake.nix
.github/workflows/: ci.yaml
.sqlx/: query-25ad7972ddb48a94d608a5b6098c3c8a79017b09c8a87b6cd2ded8fc702b2966.json  query-730677acb45aa365595f6f3665cb72fae13fe0c28c82b457fa7311c810227b0c.json  query-94c50a0103048a7503f0c1b773d03a76e03d9b4b94a378b03bc037e082f2090e.json  query-c1fe6dd2bf2dcb139955d87dba6e3ec0abca4d2146cb951889b8d5830a87b798.json  query-d6ccb81411436698d171d0763bd40b385a7f5b5ab733b6fb8da1089abdd5661a.json
migrations/: 20250220120000_task_table.sql
src/: handler.rs  main.rs  model.rs
