[package]
name = "taskplanner-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["macros", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.1", features = ["v4"] }
