[package]
name = "taskplanner-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["chrono", "macros", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
utoipa = { version = "5.3.1", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.13.1", features = ["v4"] }
